--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <h1>Vai ser uma imagem aqui</h1>
+        <img class="cabecalho-img" src="pr.png" alt="Logo">
     <ul>
         <li>Carrinho</li>
         <li>Contato</li>
